Update 2025-08-13-smaller-spring-boot-docker-image.md